<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--app name and copyright-->
    <string name="app_name">USA Newspapers &amp; News</string>
    <string name="app_copyright">Copyright &#169; 2026 USA Newspapers &amp; News \n All rights reserved</string>
    <string name="share_text">Discover, browse, and read newspapers from all 50 US States, national headlines, live TV news channels, RSS feeds, and 24/7 news talk radio with USA Newspapers &amp; News! Download now from Google Play!</string>

    <!--networks and permissions-->
    <string name="exit_msg">Press again to exit</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="btn_retry">RETRY</string>
    <string name="failed_text">There is a problem with your network or the server is down, try again later.</string>
    <string name="permission_read_external_storage">Permission to read files is required</string>
    <string name="permission_write_external_storage">Permission to write files is required</string>
    <string name="permission_access_location">Permission to access your location is required</string>
    <string name="permission_camera">Permission to access your camera is required</string>

    <!--popup menu-->
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_more">More apps</string>
    <string name="menu_about">About</string>

    <!--app deep link-->
    <string name="app_deep_link_host">usanewspaper.sanshob.com</string>

    <!--app update prompt-->
    <string name="redirect_title">App Update Available</string>
    <string name="redirect_message">A new update of USA Newspapers &amp; News is available with fresh content and improvements. Please update to enjoy the latest experience.</string>
    <string name="redirect_button">Update from Google Play</string>
    <string name="redirect_error">Unable to open update link, please try again later.</string>

    <!--settings and others-->
    <string name="txt_title_settings">Settings</string>
    <string name="title_settings_theme">Dark Theme</string>
    <string name="sub_title_settings_theme">Better for eyesight and battery life</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="title_setting_share">Share</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>
    <string name="complete_action">Complete action using</string>
    <string name="msg_error_handler">Whoops! app cannot handle this url</string>

    <!--dialog option menu-->
    <string name="dialog_option_ok">OK</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_exit">Exit</string>

    <!--exit dialog-->
    <string name="msg_dialog_exit">Are you sure you want to exit USA Newspapers &amp; News?</string>

    <!--intro slider-->
    <string name="btn_get_started">Get started</string>
    <string name="txt_skip">Skip</string>

    <!--others-->
    <string name="download_no_app">No application can handle this request. Did you install a compatible app?</string>
    <string name="submit">OK</string>
    <string name="auth_dialog_title">Login</string>
    <string name="user_name_required">A username is required</string>
    <string name="password_name_required">A password is required</string>
    <string name="requires_location_permission">Without location permission, this feature won\'t work.</string>
    <string name="no_camera_permission">This app cannot function properly without %1$s permission. Go to settings to accept it manually.</string>
    <string name="local_notification_channel_name">Local channel</string>
    <string name="local_notification_channel_description">Used to display local notifications</string>
    <string name="local_notification_channel_id">Local notification</string>
    <string name="no_favorites">No favorites saved yet.</string>

    <!--YouTube API Key-->
    <string name="youtube_api_key">AIzaSyBivUoHW3NZLtZPbFPuKuc4_fsM__EWnyI</string>

</resources>
